[package]
name = "castella"
version = "0.1.0"
edition = "2021"
description = "simple, high performance Google Drive frontend"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["io"] }
futures = "0"
thiserror = "1"
clap = { version = "3", features = ["derive", "env"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "0"
headers = "0"
bytes = "1"
warp = "0"
reqwest = { version = "0", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "json", "multipart", "stream", "socks", "trust-dns"] }
governor = "0"
chrono = { version = "0", features = ["serde"] }
sqlx = { version = "0", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
rand = "0"
base64 = "0"
sha2 = "0"
chacha20poly1305 = "0"
